# agentic-api

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
notebooks/: agentic-pattern-reflection.ipynb
tests/: __init__.py
